# keter-media-server-api

./: 1  Cargo.toml  Rocket.toml  media.http  test_and_run.bat
http/: auth.http  media.http
src/: auth.rs  authors.rs  licenses.rs  main.rs  media.rs  param_mappings.rs  store.rs  usage.rs  user.rs  users.rs  utility.rs
src/auth/: admin.rs  authentication.rs  author.rs  mod.rs  moderator.rs  registered.rs  requests.rs  responders.rs  unauthenticated.rs  user.rs  user_id.rs
src/authors/: mod.rs  requests.rs  types.rs
src/media/: mod.rs  requests.rs  types.rs
src/template/: mod.rs  requests.rs
src/utility/: file.rs  mod.rs
src/utility/json/: error.rs  mod.rs  success.rs
src/utility/plain/: error.rs  mod.rs  success.rs
temp/: .tmpBGDQf2
