[package]
name = "keter-media-server-api"
version = "0.1.0"
authors = ["Serg Chernoivanenko <LonelyKeter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch= "master"
features = ["json"]

[dependencies]
jsonwebtoken = "7.2"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
keter-media-auth = {path = "../keter-media-auth" }
keter-media-db = { path = "../keter-media-db", features = ["model", "auth"] }